--- a/style.css
+++ b/style.css
@@ -43,4 +43,52 @@ td, th {
   padding: 0;
 }
 
+.searchbox p:nth-child(1) {
+  color: #FF79DA;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  max-width: 425px;
+  border: 2px solid black;
+}
+
+.menu {
+  display: flex;
+  flex-direction: column;
+  display: none;
+}
+.menu h3 {
+  text-transform: uppercase;
+  margin-bottom: -10px;
+}
+
+.bar_divider {
+  display: inline-block;
+  border-top: 2px solid #99E2D0;
+  width: 40px;
+  flex: 1;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  background-color: #353535;
+}
+footer h4 {
+  margin: 15px 0 0 20px;
+  font-family: "shrikhand", sans-serif;
+  color: white;
+}
+footer ul {
+  margin: 20px;
+}
+footer li {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  margin: 5px;
+}
+
 /*# sourceMappingURL=style.css.map */
