--- a/sass/style.scss
+++ b/sass/style.scss
@@ -17,30 +17,155 @@ a {
     text-decoration: none;
 }
 
-/* header */
+/*----- HEADER ------*/
 
 header {
-    box-shadow: 1px 4px 2px -2px rgba(0,0,0,0.23);
+    box-shadow: 0px 4px 8px -2px rgba(0,0,0,0.83);
+    z-index: 90;
+
+    img{
+        display:flex;
+        width: 40%;
+        margin-left: 25%;
+        padding: 10px;
+    }
 }
 
-header img{
-    display:flex;
-    justify-content: end;
-    align-items: flex-end;
-    width: 40%;
-    margin-left: 25%;
-    padding: 10px;
+
+/*------- LOCALISATION -------*/
+.searchbox .localisation_bar {
+    background-color: #eaeaea;
+    
+    p {
+        display: flex;
+        height: 40px;        
+        margin-left: 29%;
+        align-items: center;
+        font-size: smaller;
+        font-weight: 500;
+
+        &::before {
+            content: "\f3c5";
+            font-family: FontAwesome;
+            margin: 10px;
+        }
+    }   
+}
+
+.searchbox .presentation{
+    background-color: #f6f6f6;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
+
+    h2 {
+        font-size: 1.5rem;
+        font-weight: 700;
+        padding: 0 50px;
+        text-align: center;
+    }
+
+    p {
+        margin: 10px 20px;
+        text-align: center;
+        font-weight: 300;
+    }
+
+    button {
+        border-radius: 25px;
+        border: none;
+        background: linear-gradient(0deg, rgba(147,86,220,1) 0%, rgba(255,121,218,1) 100%);
+        color: white;
+        font-size: 0.9rem;
+        padding: 13px;
+        margin: 10px 0;
+    }
+}
+
+/* --------- boutton Menu ------------ */
+.navmenu {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 40px;
+
+    h2 {
+        font-size: large;
+        font-weight: 700;
+    }
+
+    &:nth-child(3)::before{
+        content: "\f3cd";
+                font-family: FontAwesome;
+                margin-right:15px;
+                color: gray;
+    }
+
+    div {
+        display: flex;
+        border-radius: 15px;
+        margin: 8px;
+        padding: 20px;
+        background-color: #f6f6f6;
+        font-size: 1 rem;
+        font-weight: 500;
+        justify-content: center;
+        align-items: center;
+        box-shadow: 2px 2px 15px grey;
+
+        &:nth-child(2):before{
+            content: "\f3cd";
+                font-family: FontAwesome;
+                margin-right:15px;
+                color: gray;
+        }
+        &:nth-child(3):before{
+            content: "\f03a";
+                font-family: FontAwesome;
+                margin-right:15px;
+                color: gray;
+        }
+        &:nth-child(4){
+            background-color: #f5edff;
+            &:before{
+                content: "\f54e";
+                font-family: FontAwesome;
+                margin-right:15px;
+                color: $primary-color;
+            }
+        }
+    }
+}
+
+/* -------- présentation des restaurants ------------ */
+.restaurant {
+    background-color: #f6f6f6;
+
+    article {
+        display: flex;
+        flex-direction: column;
+        margin: 10px;
+        border: 1px solid black;
+        border-radius: 15px;
+
+        figure img{
+            object-fit: contain;
+        }
+    }
 }
 
 
-.searchbox div {
-    background-color: #353535;
-}
 
+
+
+
+/* -------- Page des menus -------*/
 .menu {
     display: flex;
     flex-direction: column;
-    display: none;
 
     h3 {
         text-transform: uppercase;
