--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */
 html, body, p, ol, ul, li, dl, dt, dd, blockquote, figure, fieldset, legend, textarea, pre, iframe, hr, h1, h2, h3, h4, h5, h6 {
   margin: 0;
@@ -54,28 +55,136 @@ a {
   text-decoration: none;
 }
 
-/* header */
+/*----- HEADER ------*/
 header {
-  box-shadow: 1px 4px 2px -2px rgba(0, 0, 0, 0.23);
+  box-shadow: 0px 4px 8px -2px rgba(0, 0, 0, 0.83);
+  z-index: 90;
 }
-
 header img {
   display: flex;
-  justify-content: end;
-  align-items: flex-end;
   width: 40%;
   margin-left: 25%;
   padding: 10px;
 }
 
-.searchbox div {
-  background-color: #353535;
+/*------- LOCALISATION -------*/
+.searchbox .localisation_bar {
+  background-color: #eaeaea;
+}
+.searchbox .localisation_bar p {
+  display: flex;
+  height: 40px;
+  margin-left: 29%;
+  align-items: center;
+  font-size: smaller;
+  font-weight: 500;
+}
+.searchbox .localisation_bar p::before {
+  content: "\f3c5";
+  font-family: FontAwesome;
+  margin: 10px;
 }
 
+.searchbox .presentation {
+  background-color: #f6f6f6;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 30px;
+}
+.searchbox .presentation h2 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  padding: 0 50px;
+  text-align: center;
+}
+.searchbox .presentation p {
+  margin: 10px 20px;
+  text-align: center;
+  font-weight: 300;
+}
+.searchbox .presentation button {
+  border-radius: 25px;
+  border: none;
+  background: linear-gradient(0deg, rgb(147, 86, 220) 0%, rgb(255, 121, 218) 100%);
+  color: white;
+  font-size: 0.9rem;
+  padding: 13px;
+  margin: 10px 0;
+}
+
+/* --------- boutton Menu ------------ */
+.navmenu {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
+}
+.navmenu h2 {
+  font-size: large;
+  font-weight: 700;
+}
+.navmenu:nth-child(3)::before {
+  content: "\f3cd";
+  font-family: FontAwesome;
+  margin-right: 15px;
+  color: gray;
+}
+.navmenu div {
+  display: flex;
+  border-radius: 15px;
+  margin: 8px;
+  padding: 20px;
+  background-color: #f6f6f6;
+  font-size: 1 rem;
+  font-weight: 500;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 2px 2px 15px grey;
+}
+.navmenu div:nth-child(2):before {
+  content: "\f3cd";
+  font-family: FontAwesome;
+  margin-right: 15px;
+  color: gray;
+}
+.navmenu div:nth-child(3):before {
+  content: "\f03a";
+  font-family: FontAwesome;
+  margin-right: 15px;
+  color: gray;
+}
+.navmenu div:nth-child(4) {
+  background-color: #f5edff;
+}
+.navmenu div:nth-child(4):before {
+  content: "\f54e";
+  font-family: FontAwesome;
+  margin-right: 15px;
+  color: #9356DC;
+}
+
+/* -------- présentation des restaurants ------------ */
+.restaurant {
+  background-color: #f6f6f6;
+}
+.restaurant article {
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+  border: 1px solid black;
+  border-radius: 15px;
+}
+.restaurant article figure img {
+  object-fit: contain;
+}
+
+/* -------- Page des menus -------*/
 .menu {
   display: flex;
   flex-direction: column;
-  display: none;
 }
 .menu h3 {
   text-transform: uppercase;
