--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,11 +10,10 @@ body {
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
     max-width: 425px;
-    border: 2px solid black;
-    display: flex;  /* ????*/
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    display: flex;
 }
 
 a {
@@ -35,6 +34,10 @@ header {
         width: 40%;
         padding: 10px;
     }
+
+    button {
+        display: none;
+    }
 }
 
 
@@ -47,7 +50,7 @@ header {
     height: 50px;
 
     p {
-        font-weight: 500;
+        font-weight: 600;
 
         &::before {
             content: "\f3c5";
@@ -185,22 +188,66 @@ header {
 /* -------- présentation des restaurants ------------ */
 .restaurant {
     background-color: #f6f6f6;
+    width: 100%;
+
+    h2 {
+        font-size: x-large;
+        font-weight: bold;
+        margin: 10% auto 5% 5%;
+    }
 
     article {
         display: flex;
         flex-direction: column;
-        margin: 15px;
-        border: 1px solid black;
+        margin: 5% 5%;
         border-radius: 15px;
         background-color: white;
         overflow: hidden;
-        
+        height: 300px;
+        width: 90%;
 
         figure img{
             width: 100%;
-            height: 150px;
-            object-fit: cover;
+            height: 200px;
+            object-fit:cover;
+            position: relative;
         }
+
+        figure button {
+            position: absolute;
+            background-color: $third-color;
+            color: green;
+            border: none;
+            padding: 5px 10px;
+            border-radius: 2px;
+        }
+
+        div {
+            display: flex;
+            flex-direction: column;
+            padding: 20px;
+            position: relative;
+
+            h3 {
+                font-weight: bold;
+                font-size: 1.3rem;
+                initial-letter-align: 1.55px;
+            }
+
+            p{
+                margin-top: 5px;
+                font-size: 1.1rem;
+                font-weight: 400;
+            }
+
+            i {
+                position: absolute;
+                right: 10%;
+                bottom: 180%;
+                font-size: 2rem;
+            }
+        }
+
     }
 }
 
@@ -210,22 +257,89 @@ header {
 
 
 /* -------- Page des menus -------*/
+
 .menu {
     display: flex;
+    top: -300px;
     flex-direction: column;
+    border: 3px solid black;
+    width: 100%;
+    border-radius: 30px 30px 0 0;
+    padding: 20px;
+
+    .title {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        font-size:xx-large;
+        align-items: center;
+
+        h2{
+            font-weight: 900;
+            font-family: 'shrikhand', sans-serif;
+        }
+    }
+
+    .bar_divider {
+        display: inline-block;
+        border-top: 2px solid $third-color;
+        width: 40px;
+        flex: 1;
+    }    
 
     h3 {
         text-transform: uppercase;
-        margin-bottom: -10px;
+    }
+
+    h3 + .bar_divider {
+        margin-bottom: 10px;
+    }
+
+    .categorie {
+        display: flex;
+        flex-direction: column;
+        margin: 20px 0;
+        padding: 10px;
+
+        article {
+            display: flex;
+            border-radius: 15px;
+            margin: 8px 0;
+            background-color: $third-color;
+            align-items: center;
+            box-shadow: 2px 4px 8px rgb(216, 211, 211);
+
+            .anim_label {
+                background-color: white;
+                width: 100%;
+                padding: 20px;
+                border-radius: 15px;
+
+                &:hover {
+                    width: 80%;
+                    transition: 0.5s;
+                }
+
+                span {
+                    font-weight: 600;
+                }
+            }
+        }
+    }
+
+    .order {
+        border-radius: 25px;
+        border: none;
+        background: linear-gradient(0deg, rgba(147,86,220,1) 0%, rgba(255,121,218,1) 100%);
+        color: white;
+        font-size: 0.9rem;
+        padding: 13px;
+        margin: 10px 0;
+        cursor: pointer;
+        width: 60%;
     }
 }
 
-.bar_divider {
-    display: inline-block;
-    border-top: 2px solid $third-color;
-    width: 40px;
-    flex: 1;
-}
 
 
 // FOOTER
@@ -234,32 +348,46 @@ footer {
     display: flex;
     flex-direction: column;
     background-color: #353535;
+    padding: 20px;
+    width: 100%;
+
 
     h4 {
-        margin: 15px 0 0 20px;
         font-family: 'shrikhand', sans-serif;
         color: white;
+        font-size: 1.4rem;
     }
 
     ul {
-        margin: 20px;
+        margin: 8% 0;
     }
+
 
     li {
         color: white;
         display: flex;
-        flex-direction: column;
-        margin: 5px;
+        flex-direction: row;
+        line-height: 2em;
+
+        &:nth-child(1) {
+            font-weight: 400;
+        }
+
+        &:nth-child(2) {
+            font-weight: 400;
+        }
 
         &:nth-child(1):before{
             display: flex;
             flex-direction: row;
             content: "\f2e7";
             font-family: FontAwesome;
+            margin-right: 2%;
         }
         &:nth-child(2):before{
             content: "\f4c4";
             font-family: FontAwesome;
+            margin-right: 2%;
         }
     }
 }
