--- a/style.css
+++ b/style.css
@@ -48,12 +48,10 @@ body {
   font-family: "Roboto", sans-serif;
   font-weight: 300;
   max-width: 425px;
-  border: 2px solid black;
-  display: flex;
-  /* ????*/
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  display: flex;
 }
 
 a {
@@ -73,6 +71,9 @@ header img {
   width: 40%;
   padding: 10px;
 }
+header button {
+  display: none;
+}
 
 /*------- LOCALISATION -------*/
 .searchbox .localisation_bar {
@@ -83,7 +84,7 @@ header img {
   height: 50px;
 }
 .searchbox .localisation_bar p {
-  font-weight: 500;
+  font-weight: 600;
 }
 .searchbox .localisation_bar p::before {
   content: "\f3c5";
@@ -206,67 +207,170 @@ header img {
 /* -------- présentation des restaurants ------------ */
 .restaurant {
   background-color: #f6f6f6;
+  width: 100%;
+}
+.restaurant h2 {
+  font-size: x-large;
+  font-weight: bold;
+  margin: 10% auto 5% 5%;
 }
 .restaurant article {
   display: flex;
   flex-direction: column;
-  margin: 15px;
-  border: 1px solid black;
+  margin: 5% 5%;
   border-radius: 15px;
   background-color: white;
   overflow: hidden;
+  height: 300px;
+  width: 90%;
 }
 .restaurant article figure img {
   width: 100%;
-  height: 150px;
+  height: 200px;
   object-fit: cover;
+  position: relative;
+}
+.restaurant article figure button {
+  position: absolute;
+  background-color: #99E2D0;
+  color: green;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 2px;
+}
+.restaurant article div {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  position: relative;
+}
+.restaurant article div h3 {
+  font-weight: bold;
+  font-size: 1.3rem;
+  initial-letter-align: 1.55px;
+}
+.restaurant article div p {
+  margin-top: 5px;
+  font-size: 1.1rem;
+  font-weight: 400;
+}
+.restaurant article div i {
+  position: absolute;
+  right: 10%;
+  bottom: 180%;
+  font-size: 2rem;
 }
 
 /* -------- Page des menus -------*/
 .menu {
   display: flex;
+  top: -300px;
   flex-direction: column;
+  border: 3px solid black;
+  width: 100%;
+  border-radius: 30px 30px 0 0;
+  padding: 20px;
 }
-.menu h3 {
-  text-transform: uppercase;
-  margin-bottom: -10px;
+.menu .title {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-size: xx-large;
+  align-items: center;
 }
-
-.bar_divider {
+.menu .title h2 {
+  font-weight: 900;
+  font-family: "shrikhand", sans-serif;
+}
+.menu .bar_divider {
   display: inline-block;
   border-top: 2px solid #99E2D0;
   width: 40px;
   flex: 1;
+}
+.menu h3 {
+  text-transform: uppercase;
+}
+.menu h3 + .bar_divider {
+  margin-bottom: 10px;
+}
+.menu .categorie {
+  display: flex;
+  flex-direction: column;
+  margin: 20px 0;
+  padding: 10px;
+}
+.menu .categorie article {
+  display: flex;
+  border-radius: 15px;
+  margin: 8px 0;
+  background-color: #99E2D0;
+  align-items: center;
+  box-shadow: 2px 4px 8px rgb(216, 211, 211);
+}
+.menu .categorie article .anim_label {
+  background-color: white;
+  width: 100%;
+  padding: 20px;
+  border-radius: 15px;
+}
+.menu .categorie article .anim_label:hover {
+  width: 80%;
+  transition: 0.5s;
+}
+.menu .categorie article .anim_label span {
+  font-weight: 600;
+}
+.menu .order {
+  border-radius: 25px;
+  border: none;
+  background: linear-gradient(0deg, rgb(147, 86, 220) 0%, rgb(255, 121, 218) 100%);
+  color: white;
+  font-size: 0.9rem;
+  padding: 13px;
+  margin: 10px 0;
+  cursor: pointer;
+  width: 60%;
 }
 
 footer {
   display: flex;
   flex-direction: column;
   background-color: #353535;
+  padding: 20px;
+  width: 100%;
 }
 footer h4 {
-  margin: 15px 0 0 20px;
   font-family: "shrikhand", sans-serif;
   color: white;
+  font-size: 1.4rem;
 }
 footer ul {
-  margin: 20px;
+  margin: 8% 0;
 }
 footer li {
   color: white;
   display: flex;
-  flex-direction: column;
-  margin: 5px;
+  flex-direction: row;
+  line-height: 2em;
+}
+footer li:nth-child(1) {
+  font-weight: 400;
+}
+footer li:nth-child(2) {
+  font-weight: 400;
 }
 footer li:nth-child(1):before {
   display: flex;
   flex-direction: row;
   content: "\f2e7";
   font-family: FontAwesome;
+  margin-right: 2%;
 }
 footer li:nth-child(2):before {
   content: "\f4c4";
   font-family: FontAwesome;
+  margin-right: 2%;
 }
 
 /*# sourceMappingURL=style.css.map */
