--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,7 +9,6 @@ $third-color: #99E2D0;
 body { 
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
-    max-width: 425px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -206,20 +205,27 @@ header {
         height: 300px;
         width: 90%;
 
+        .restaurant_pic {
+            position: relative;
+        }
+
         figure img{
             width: 100%;
             height: 200px;
             object-fit:cover;
-            position: relative;
         }
 
         figure button {
             position: absolute;
+            display: block;
             background-color: $third-color;
-            color: green;
+            color: rgb(255, 255, 255);
             border: none;
             padding: 5px 10px;
             border-radius: 2px;
+            z-index: 20;
+            right: 5%;
+            top: 5%;
         }
 
         div {
