--- a/style.css
+++ b/style.css
@@ -47,7 +47,6 @@ td, th {
 body {
   font-family: "Roboto", sans-serif;
   font-weight: 300;
-  max-width: 425px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -224,19 +223,25 @@ header button {
   height: 300px;
   width: 90%;
 }
+.restaurant article .restaurant_pic {
+  position: relative;
+}
 .restaurant article figure img {
   width: 100%;
   height: 200px;
   object-fit: cover;
-  position: relative;
 }
 .restaurant article figure button {
   position: absolute;
+  display: block;
   background-color: #99E2D0;
-  color: green;
+  color: rgb(255, 255, 255);
   border: none;
   padding: 5px 10px;
   border-radius: 2px;
+  z-index: 20;
+  right: 5%;
+  top: 5%;
 }
 .restaurant article div {
   display: flex;
