--- a/sass/style.scss
+++ b/sass/style.scss
@@ -23,11 +23,11 @@ a {
 /*----- HEADER ------*/
 
 header {
+    position: relative;
     width: 100%;
     box-shadow: 0px 2px 5px -2px rgba(0,0,0,0.33);
     z-index: 90;
-    display:flex;
-    justify-content: center;
+    text-align: center;
 
     img{
         width: 40%;
@@ -35,7 +35,17 @@ header {
     }
 
     button {
-        display: none;
+        border: none;
+        background-color: transparent;
+        font-size: x-large;
+        position: absolute;
+        left: 20px;
+        top: 50%;
+        transform: translateY(-50%);
+
+        &:hover {
+            cursor: pointer;
+        }
     }
 }
 
@@ -263,15 +273,21 @@ header {
 
 
 /* -------- Page des menus -------*/
+.picture {
+    display: block;
+    max-height: 350px;
+}
 
 .menu {
     display: flex;
     top: -300px;
     flex-direction: column;
-    border: 3px solid black;
     width: 100%;
     border-radius: 30px 30px 0 0;
     padding: 20px;
+    position: relative;
+    top: -70px;
+    background-color: #f6f6f6;
 
     .title {
         display: flex;
@@ -314,12 +330,24 @@ header {
             background-color: $third-color;
             align-items: center;
             box-shadow: 2px 4px 8px rgb(216, 211, 211);
+            width: 100%;
 
             .anim_label {
                 background-color: white;
                 width: 100%;
                 padding: 20px;
                 border-radius: 15px;
+
+                div {
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+
+                    .price {
+                        font-weight: 600;
+                    }
+    
+                }
 
                 &:hover {
                     width: 80%;
@@ -343,6 +371,9 @@ header {
         margin: 10px 0;
         cursor: pointer;
         width: 60%;
+        position: relative;
+        left: 50%;
+        transform: translateX(-50%);
     }
 }
 
