--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,9 +1,7 @@
 @import "libs/reset.scss";
-
-$icone-liste: (couvert "f2e7" #fff);
-$primary-color: #9356DC;
-$secondary-color: #FF79DA;
-$third-color: #99E2D0;
+@import "variable.scss";
+@import "btn.scss";
+@import "animation.scss";
 
 
 body { 
@@ -32,20 +30,6 @@ header {
     img{
         width: 40%;
         padding: 10px;
-    }
-
-    button {
-        border: none;
-        background-color: transparent;
-        font-size: x-large;
-        position: absolute;
-        left: 20px;
-        top: 50%;
-        transform: translateY(-50%);
-
-        &:hover {
-            cursor: pointer;
-        }
     }
 }
 
@@ -88,17 +72,6 @@ header {
         margin: 10px 20px;
         text-align: center;
         font-weight: 300;
-    }
-
-    button {
-        border-radius: 25px;
-        border: none;
-        background: linear-gradient(0deg, rgba(147,86,220,1) 0%, rgba(255,121,218,1) 100%);
-        color: white;
-        font-size: 0.9rem;
-        padding: 13px;
-        margin: 10px 0;
-        cursor: pointer;
     }
 }
 
@@ -225,19 +198,6 @@ header {
             object-fit:cover;
         }
 
-        figure button {
-            position: absolute;
-            display: block;
-            background-color: $third-color;
-            color: rgb(255, 255, 255);
-            border: none;
-            padding: 5px 10px;
-            border-radius: 2px;
-            z-index: 20;
-            right: 5%;
-            top: 5%;
-        }
-
         div {
             display: flex;
             flex-direction: column;
@@ -322,6 +282,21 @@ header {
         flex-direction: column;
         margin: 20px 0;
         padding: 10px;
+        @include fade_up;
+
+        &:nth-child(3) {
+            @include fade_up;
+            & .label_box {
+                animation-delay: 1s;
+            }
+        }
+
+        &:nth-child(4) {
+            @include fade_up;
+            & .label_box {
+                animation-delay: 1.5s;
+            }
+        }
 
         article {
             display: flex;
@@ -361,19 +336,9 @@ header {
         }
     }
 
-    .order {
-        border-radius: 25px;
-        border: none;
-        background: linear-gradient(0deg, rgba(147,86,220,1) 0%, rgba(255,121,218,1) 100%);
-        color: white;
-        font-size: 0.9rem;
-        padding: 13px;
-        margin: 10px 0;
-        cursor: pointer;
-        width: 60%;
-        position: relative;
-        left: 50%;
-        transform: translateX(-50%);
+    .btn_container {
+        display: flex;
+        justify-content: center;
     }
 }
 
