--- a/style.css
+++ b/style.css
@@ -44,6 +44,122 @@ td, th {
   padding: 0;
 }
 
+/* BOUTON "nouveau" pour les cartes de restaurant */
+article figure button {
+  position: absolute;
+  display: block;
+  background-color: #99E2D0;
+  color: rgb(255, 255, 255);
+  border: none;
+  padding: 5px 10px;
+  border-radius: 2px;
+  z-index: 20;
+  right: 5%;
+  top: 5%;
+}
+
+/* BOUTON retour pour les headers des pages restaurant */
+header button {
+  border: none;
+  background-color: transparent;
+  font-size: x-large;
+  position: absolute;
+  left: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+header button:hover {
+  cursor: pointer;
+}
+
+/* BOUTON générique */
+.generic {
+  border-radius: 25px;
+  border: none;
+  background: linear-gradient(0deg, rgb(147, 86, 220) 0%, rgb(255, 121, 218) 100%);
+  color: white;
+  min-width: 300px;
+  font-size: 0.9rem;
+  padding: 13px;
+  margin: 10px 0;
+  cursor: pointer;
+}
+.generic:hover {
+  background: linear-gradient(170deg, rgba(255, 121, 218, 0.8) 0%, rgba(214, 108, 219, 0.8) 39%, rgba(171, 94, 220, 0.8) 85%, rgba(155, 89, 220, 0.8) 100%);
+  box-shadow: 4px 4px 2px rgb(172, 171, 171);
+}
+
+/* LOADER PAGE */
+.loader {
+  position: fixed;
+  background-color: aliceblue;
+  height: 100vh;
+  inset: 0;
+  z-index: 99;
+  opacity: 0.95;
+  animation: loading 2s forwards;
+  animation-delay: 3s;
+}
+.loader .color_cont {
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.loader .color_cont .color {
+  display: inline-block;
+  height: 20rem;
+  width: 32%;
+  border-radius: 50%;
+}
+.loader .color_cont .color1 {
+  background-color: #9356DC;
+  filter: blur(4rem);
+}
+.loader .color_cont .color2 {
+  background-color: #99E2D0;
+  filter: blur(4rem);
+}
+.loader .color_cont .color3 {
+  background-color: #FF79DA;
+  filter: blur(4rem);
+}
+.loader .icone {
+  position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
+}
+.loader .icone path:nth-child(1) {
+  stroke-dasharray: 40px;
+  stroke-dashoffset: 40px;
+  animation: anim 6s ease infinite forwards;
+}
+@keyframes anim {
+  0% {
+    stroke-dashoffset: 0;
+  }
+  25% {
+    stroke-dashoffset: 30px;
+  }
+  50% {
+    stroke-dashoffset: 10px;
+  }
+  75% {
+    stroke-dasharray: 30px;
+  }
+  100% {
+    stroke-dasharray: 10;
+  }
+}
+
+@keyframes loading {
+  100% {
+    opacity: 0;
+    z-index: -10;
+  }
+}
+/* APPARATITION DES ARTICLES */
 body {
   font-family: "Roboto", sans-serif;
   font-weight: 300;
@@ -69,18 +185,6 @@ header {
 header img {
   width: 40%;
   padding: 10px;
-}
-header button {
-  border: none;
-  background-color: transparent;
-  font-size: x-large;
-  position: absolute;
-  left: 20px;
-  top: 50%;
-  transform: translateY(-50%);
-}
-header button:hover {
-  cursor: pointer;
 }
 
 /*------- LOCALISATION -------*/
@@ -118,16 +222,6 @@ header button:hover {
   margin: 10px 20px;
   text-align: center;
   font-weight: 300;
-}
-.searchbox .presentation button {
-  border-radius: 25px;
-  border: none;
-  background: linear-gradient(0deg, rgb(147, 86, 220) 0%, rgb(255, 121, 218) 100%);
-  color: white;
-  font-size: 0.9rem;
-  padding: 13px;
-  margin: 10px 0;
-  cursor: pointer;
 }
 
 /* --------- boutton Menu ------------ */
@@ -240,18 +334,6 @@ header button:hover {
   height: 200px;
   object-fit: cover;
 }
-.restaurant article figure button {
-  position: absolute;
-  display: block;
-  background-color: #99E2D0;
-  color: rgb(255, 255, 255);
-  border: none;
-  padding: 5px 10px;
-  border-radius: 2px;
-  z-index: 20;
-  right: 5%;
-  top: 5%;
-}
 .restaurant article div {
   display: flex;
   flex-direction: column;
@@ -321,6 +403,60 @@ header button:hover {
   margin: 20px 0;
   padding: 10px;
 }
+.menu .categorie .label_box {
+  animation-name: fadeUp;
+  animation-duration: 1000ms;
+  animation-fill-mode: backwards;
+  animation-delay: 0.5s;
+}
+@keyframes fadeUp {
+  from {
+    transform: translateY(100px);
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+.menu .categorie:nth-child(3) .label_box {
+  animation-name: fadeUp;
+  animation-duration: 1000ms;
+  animation-fill-mode: backwards;
+  animation-delay: 0.5s;
+}
+@keyframes fadeUp {
+  from {
+    transform: translateY(100px);
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+.menu .categorie:nth-child(3) .label_box {
+  animation-delay: 1s;
+}
+.menu .categorie:nth-child(4) .label_box {
+  animation-name: fadeUp;
+  animation-duration: 1000ms;
+  animation-fill-mode: backwards;
+  animation-delay: 0.5s;
+}
+@keyframes fadeUp {
+  from {
+    transform: translateY(100px);
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+.menu .categorie:nth-child(4) .label_box {
+  animation-delay: 1.5s;
+}
 .menu .categorie article {
   display: flex;
   border-radius: 15px;
@@ -351,19 +487,9 @@ header button:hover {
 .menu .categorie article .anim_label span {
   font-weight: 600;
 }
-.menu .order {
-  border-radius: 25px;
-  border: none;
-  background: linear-gradient(0deg, rgb(147, 86, 220) 0%, rgb(255, 121, 218) 100%);
-  color: white;
-  font-size: 0.9rem;
-  padding: 13px;
-  margin: 10px 0;
-  cursor: pointer;
-  width: 60%;
-  position: relative;
-  left: 50%;
-  transform: translateX(-50%);
+.menu .btn_container {
+  display: flex;
+  justify-content: center;
 }
 
 footer {
