--- a/sass/btn.scss
+++ b/sass/btn.scss
@@ -1,6 +1,6 @@
 /* BOUTON "nouveau" pour les cartes de restaurant */
 
-article figure button {
+.new {
     position: absolute;
     display: block;
     background-color: $third-color;
