--- a/sass/variable.scss
+++ b/sass/variable.scss
@@ -1,4 +1,4 @@
-$primary-color: #9356DC;
-$secondary-color: #FF79DA;
-$third-color: #99E2D0;
+$primary-color: #9356dc;
+$secondary-color: #ff79da;
+$third-color: #99e2d0;
 $darkshadow: rgb(172, 171, 171);
