--- a/style.css
+++ b/style.css
@@ -1,11 +1,38 @@
 @charset "UTF-8";
 /*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */
-html, body, p, ol, ul, li, dl, dt, dd, blockquote, figure, fieldset, legend, textarea, pre, iframe, hr, h1, h2, h3, h4, h5, h6 {
+html,
+body,
+p,
+ol,
+ul,
+li,
+dl,
+dt,
+dd,
+blockquote,
+figure,
+fieldset,
+legend,
+textarea,
+pre,
+iframe,
+hr,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 0;
   padding: 0;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-size: 100%;
   font-weight: normal;
 }
@@ -14,7 +41,9 @@ ul {
   list-style: none;
 }
 
-button, input, select {
+button,
+input,
+select {
   margin: 0;
 }
 
@@ -22,11 +51,14 @@ html {
   box-sizing: border-box;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: inherit;
 }
 
-img, video {
+img,
+video {
   height: auto;
   max-width: 100%;
 }
@@ -40,7 +72,8 @@ table {
   border-spacing: 0;
 }
 
-td, th {
+td,
+th {
   padding: 0;
 }
 
@@ -48,7 +81,7 @@ td, th {
 .new {
   position: absolute;
   display: block;
-  background-color: #99E2D0;
+  background-color: #99e2d0;
   color: rgb(255, 255, 255);
   border: none;
   padding: 5px 10px;
@@ -76,7 +109,11 @@ header button:hover {
 .generic {
   border-radius: 25px;
   border: none;
-  background: linear-gradient(0deg, rgb(147, 86, 220) 0%, rgb(255, 121, 218) 100%);
+  background: linear-gradient(
+    0deg,
+    rgb(147, 86, 220) 0%,
+    rgb(255, 121, 218) 100%
+  );
   color: white;
   min-width: 300px;
   font-size: 0.9rem;
@@ -85,7 +122,13 @@ header button:hover {
   cursor: pointer;
 }
 .generic:hover {
-  background: linear-gradient(170deg, rgba(255, 121, 218, 0.8) 0%, rgba(214, 108, 219, 0.8) 39%, rgba(171, 94, 220, 0.8) 85%, rgba(155, 89, 220, 0.8) 100%);
+  background: linear-gradient(
+    170deg,
+    rgba(255, 121, 218, 0.8) 0%,
+    rgba(214, 108, 219, 0.8) 39%,
+    rgba(171, 94, 220, 0.8) 85%,
+    rgba(155, 89, 220, 0.8) 100%
+  );
   box-shadow: 4px 4px 2px rgb(172, 171, 171);
 }
 
@@ -114,15 +157,15 @@ header button:hover {
   border-radius: 50%;
 }
 .loader .color_cont .color1 {
-  background-color: #9356DC;
+  background-color: #9356dc;
   filter: blur(4rem);
 }
 .loader .color_cont .color2 {
-  background-color: #99E2D0;
+  background-color: #99e2d0;
   filter: blur(4rem);
 }
 .loader .color_cont .color3 {
-  background-color: #FF79DA;
+  background-color: #ff79da;
   filter: blur(4rem);
 }
 .loader .icone {
@@ -250,7 +293,7 @@ header img {
 }
 .navmenu div:nth-child(2)::before {
   content: "1";
-  background-color: #9356DC;
+  background-color: #9356dc;
   color: white;
   border-radius: 50%;
   text-align: center;
@@ -268,7 +311,7 @@ header img {
 }
 .navmenu div:nth-child(3)::before {
   content: "2";
-  background-color: #9356DC;
+  background-color: #9356dc;
   color: white;
   border-radius: 50%;
   text-align: center;
@@ -289,7 +332,7 @@ header img {
 }
 .navmenu div:nth-child(4)::before {
   content: "3";
-  background-color: #9356DC;
+  background-color: #9356dc;
   color: white;
   border-radius: 50%;
   text-align: center;
@@ -303,7 +346,7 @@ header img {
   content: "\f54e";
   font-family: FontAwesome;
   margin-right: 15px;
-  color: #9356DC;
+  color: #9356dc;
 }
 
 /* -------- présentation des restaurants ------------ */
@@ -387,7 +430,7 @@ header img {
 }
 .menu .bar_divider {
   display: inline-block;
-  border-top: 2px solid #99E2D0;
+  border-top: 2px solid #99e2d0;
   width: 40px;
   flex: 1;
 }
@@ -461,7 +504,7 @@ header img {
   display: flex;
   border-radius: 15px;
   margin: 8px 0;
-  background-color: #99E2D0;
+  background-color: #99e2d0;
   align-items: center;
   box-shadow: 2px 4px 8px rgb(216, 211, 211);
   width: 100%;
