--- a/sass/animation.scss
+++ b/sass/animation.scss
@@ -66,7 +66,7 @@
             stroke-dasharray: 30px;
             }
         100% {
-           stroke-dasharray: 10;
+           stroke-dasharray: 10px;
             }
         }
     }
